--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/auth": "^1.7.3",
+    "firebase": "^10.12.1",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "gsap": "^3.12.5",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
