--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@firebase/app": "^0.10.4",
     "@firebase/auth": "^1.7.3",
+    "axios": "^1.7.2",
     "firebase": "^10.12.1",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
@@ -28,8 +29,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
